nav bar created in html. css unmodified

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,61 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./assets/reset.css">
 <link rel="stylesheet" href="./assets/style.css">
+
+<header>Don Chisolm</header>
+
 <body>
-    
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <nav class= "top-bar" >
+        <a href= #about-me>About me</a>
+        <a href= #porfolio>Portfolio</a>
+        <a href= #Mission-statement>Mission-statement</a>
+        <a href= #contact>Contact Me</a>
+    </nav>
 
 
 
