contacts me code ceated unfisished. css unmodified

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,19 @@
         <a href= #Mission-statement>Mission-statement</a>
         <a href= #contact>Contact Me</a>
     </nav>
-
+    
+    <section class="page-section contact" id="contact">
+        <h2>Contact Me</h2>
+        <div>
+          <address>
+            <a href="tel:+17047374057">704.737.4057</a>
+            <a href="mailto:don.chisolm14@gmail.com">don.chisolm14@gmail.com</a>
+            <a href="#">GitHub</a>
+            <a href="https://twitter.com/don_2c?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @don_2c</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a href="#">Spotify</a>
+          </address>
+        </div>
+      </section> 
 
 
 
