recent photo added. was unable properly position navagtion bar, name, or photo needs work. css updated with new image code to size. Unfinished.

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,31 +6,59 @@
 <link rel="stylesheet" href="./assets/reset.css">
 <link rel="stylesheet" href="./assets/style.css">
 
-<header>Don Chisolm</header>
+
 
 <body>
-
+  <header>
+    <h1>Don C</h1>
     <nav class= "top-bar" >
         <a href= #about-me>About me</a>
-        <a href= #porfolio>Portfolio</a>
+        <a href= #Porfolio>Portfolio</a>
         <a href= #Mission-statement>Mission-statement</a>
         <a href= #contact>Contact Me</a>
     </nav>
-    
-    <section class="page-section contact" id="contact">
-        <h2>Contact Me</h2>
-        <div>
-          <address>
-            <a href="tel:+17047374057">704.737.4057</a>
-            <a href="mailto:don.chisolm14@gmail.com">don.chisolm14@gmail.com</a>
-            <a href="#">GitHub</a>
-            <a href="https://twitter.com/don_2c?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @don_2c</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            <a href="#">Spotify</a>
-          </address>
-        </div>
-      </section> 
+  </header>
+  <img src= "assets/DonC - Copy.jpg" class= "picofme" alt= "me in my natural habitat">
 
+  <main>
+    <section id="about-me" class="style1">
+      <img src="#" class="image1"/>
+      <h2>About Me</h2>
+      <p>Born and raise in Charlotte, NC. Obssesed with cars and high speed as a hobby thought. I'd hate to make my hobby a job it would ruin the allure and adrenline rush of it all. Im just a simple city-country boy that likes to go fast.</p>
+    </section>
+    <section id="Portfolio" Class= "style2">
+      <img src="#" class= "image2"/>
+      <h2>Portfolio</h2>
+        <ul>
+          <li>placeholder link</li>
+          <li>placeholder link</li>
+          <li>placeholder link</li>
+          <li>placeholder link</li>
+        </ul>
+    </section>
+    <section id="Mission-statement" class="style3">
+      <img src="#" class= "image3"/>
+      <h2>Mission Statement</h2>
+      <P>
+        Be the the very best I can be in every aspect.
+      </P>
 
+    </section>
 
+  </main>
+  <footer class="page-section contact" id="contact">
+    <h2>Contact Me</h2>
+      <div>
+        <address>
+          <ul>
+              <li><a href="tel:+17047374057">704.737.4057</a></li>
+              <li><a href="mailto:don.chisolm14@gmail.com">don.chisolm14@gmail.com</a></li>
+              <li><a href="https://donchiz77.github.io">GitHub</a></li>
+              <li><a href="https://twitter.com/don_2c?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @don_2c</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
+              <li><a href="https://stackoverflow.com/users/15666210/don-c"><img src="https://stackoverflow.com/users/flair/15666210.png" width="208" height="58" alt="profile for Don C. at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Don C. at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a></li>
+           </ul>
+        </address>
+      </div>
+  </footer> 
 </body>
 </html>
