--- a/portfolio.html
+++ b/portfolio.html
@@ -5,19 +5,44 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./assets/reset.css">
 <link rel="stylesheet" href="./assets/style.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
 
 <body>
-  <header>
-    <h1>Don C</h1>
-    <nav class= "top-bar" >
+  <!-- <header>
+    <h1>Don C</h1> -->
+    <!-- <nav class= "top-bar" >
         <a href= #about-me>About me</a>
         <a href= #Porfolio>Portfolio</a>
         <a href= #Mission-statement>Mission-statement</a>
         <a href= #contact>Contact Me</a>
+    </nav> -->
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light"style="background-color: #e3f2fd;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Don Chisolm</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about-me">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-  </header>
+  <!-- </header> -->
   <img src= "assets/DonC - Copy.jpg" class= "picofme" alt= "me in my natural habitat">
 
   <main>
