new profile picture added

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
       </div>
     </nav>
   <!-- </header> -->
-  <img src= "assets/DonC - Copy.jpg" class= "picofme" alt= "me in my natural habitat">
+  <img src= "assets/Profilepic1.jpg" class= "picofme" alt= "me in my natural habitat">
 
   <main>
     <section id="about-me" class="style1">
