cards added for links to be added with project works. nav bar fixed still not mobile responsive. git hub link fixed

--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
 
 
 <body>
-  <!-- <header>
-    <h1>Don C</h1> -->
-    <!-- <nav class= "top-bar" >
-        <a href= #about-me>About me</a>
-        <a href= #Porfolio>Portfolio</a>
-        <a href= #Mission-statement>Mission-statement</a>
-        <a href= #contact>Contact Me</a>
-    </nav> -->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light"style="background-color: #e3f2fd;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Don Chisolm</a>
@@ -25,7 +17,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
@@ -35,9 +27,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#Portfolio">Portfolio</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -46,23 +38,74 @@
   <img src= "assets/Profilepic1.jpg" class= "picofme" alt= "me in my natural habitat">
 
   <main>
-    <section id="about-me" class="style1">
-      <img src="#" class="image1"/>
+    <section id="about-me" class="style1 text-center">
+      <!-- <img src="#" class="image1"/> -->
       <h2>About Me</h2>
       <p>Born and raise in Charlotte, NC. Obssesed with cars and high speed as a hobby thought. I'd hate to make my hobby a job it would ruin the allure and adrenline rush of it all. Im just a simple city-country boy that likes to go fast.</p>
     </section>
-    <section id="Portfolio" Class= "style2">
-      <img src="#" class= "image2"/>
+    <section id="Portfolio" Class= "style2 text-center">
+      <!-- <img src="#" class= "image2"/> -->
       <h2>Portfolio</h2>
         <ul>
-          <li>placeholder link</li>
-          <li>placeholder link</li>
-          <li>placeholder link</li>
-          <li>placeholder link</li>
+          <li>
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Day Planner</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Password Generator</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Hiketunez</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Coding Quiz</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
         </ul>
     </section>
-    <section id="Mission-statement" class="style3">
-      <img src="#" class= "image3"/>
+    <section id="Mission-statement" class="style3 text-center">
+      <!-- <img src="#" class= "image3"/> -->
+      <div class="card">
+        <div class="card-header">
+          Quote
+        </div>
+        <div class="card-body text-center">
+          <blockquote class="blockquote mb-0">
+            <p>Practice makes perfect, but nobody's perfect, so why practice?</p>
+            <footer class="blockquote-footer">Kurt Cobain <cite title="Source Title">Source Title</cite></footer>
+          </blockquote>
+        </div>
+      </div>
       <h2>Mission Statement</h2>
       <P>
         Be the the very best I can be in every aspect.
@@ -71,14 +114,14 @@
     </section>
 
   </main>
-  <footer class="page-section contact" id="contact">
+  <footer class="page-section contact text-center" id="contact">
     <h2>Contact Me</h2>
       <div>
         <address>
           <ul>
               <li><a href="tel:+17047374057">704.737.4057</a></li>
               <li><a href="mailto:don.chisolm14@gmail.com">don.chisolm14@gmail.com</a></li>
-              <li><a href="https://donchiz77.github.io">GitHub</a></li>
+              <li><a href="https://github.com/Donchiz77">GitHub</a></li>
               <li><a href="https://twitter.com/don_2c?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @don_2c</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
               <li><a href="https://stackoverflow.com/users/15666210/don-c"><img src="https://stackoverflow.com/users/flair/15666210.png" width="208" height="58" alt="profile for Don C. at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Don C. at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a></li>
            </ul>
