--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
       </div>
     </nav>
   <!-- </header> -->
-  <img src= "assets/Profilepic1.jpg" class= "picofme" alt= "me in my natural habitat">
+  <div class="text-center">
+  <img src= "assets/Profilepic1.jpg" class= "picofme img-fluid" alt= "me in my natural habitat">
+  </div>
 
   <main>
     <section id="about-me" class="style1 text-center">
       <!-- <img src="#" class="image1"/> -->
       <h2>About Me</h2>
-      <p>Born and raise in Charlotte, NC. Obssesed with cars and high speed as a hobby thought. I'd hate to make my hobby a job it would ruin the allure and adrenline rush of it all. Im just a simple city-country boy that likes to go fast.</p>
+      <p>Born and raise in Charlotte, NC. Obssesed with cars and high speed as a hobby though. I'd hate to make my hobby a job it would ruin the allure and adrenline rush of it all. Im just a simple city-country boy that likes to go fast.</p>
     </section>
     <section id="Portfolio" Class= "style2 text-center">
       <!-- <img src="#" class= "image2"/> -->
@@ -53,8 +55,8 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Day Planner</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text">A simple day planner using local storage and javascript.</p>
+                    <a href="https://github.com/Donchiz77/Mochi" class="btn btn-primary">GitHub</a>
                   </div>
                 </div>
               </div>
@@ -62,8 +64,8 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Password Generator</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text">Vanilla javascript password generator.</p>
+                    <a href="https://github.com/Donchiz77/password-gen" class="btn btn-primary">GitHub</a>
                   </div>
                 </div>
               </div>
@@ -75,8 +77,8 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Hiketunez</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text">A Group project with the intened goal of providing users with a music pairing with their hiking experience. Javascript and Bulma css framework used in this project.</p>
+                    <a href="https://github.com/Donchiz77/Hiketunez" class="btn btn-primary">GitHub</a>
                   </div>
                 </div>
               </div>
@@ -84,8 +86,8 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Coding Quiz</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text">A simple vanilla java script quiz for coding.</p>
+                    <a href="https://github.com/Donchiz77/Coding-Quiz" class="btn btn-primary">GitHub</a>
                   </div>
                 </div>
               </div>
@@ -102,7 +104,7 @@
         <div class="card-body text-center">
           <blockquote class="blockquote mb-0">
             <p>Practice makes perfect, but nobody's perfect, so why practice?</p>
-            <footer class="blockquote-footer">Kurt Cobain <cite title="Source Title">Source Title</cite></footer>
+            <footer class="blockquote-footer">Kurt Cobain</footer>
           </blockquote>
         </div>
       </div>
@@ -127,6 +129,7 @@
            </ul>
         </address>
       </div>
-  </footer> 
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
